bg color to #bdea

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
   background-size: auto;
   background-repeat: repeat; */
 
-  background-color: #ddd;
+  background-color: #bdea;
   background-image: radial-gradient(#777 10%, transparent 11%),
     radial-gradient(#777 10%, transparent 11%);
   background-size: 10px 10px;
