--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @font-face {
-  font-family: 'Neutra Text Bold';
-  src: url(./fonts/Neutra\ Text\ Bold.otf);
+  font-family: 'ProductSans';
+  src: url(./fonts/Product-Sans/ProductSans-Light.ttf);
+}
+@font-face {
+  font-family: 'ProductSans Bold';
+  src: url(./fonts/Product-Sans/ProductSans-Bold.ttf);
 }
 
 * {
@@ -9,6 +13,7 @@
   color: #444;
   /* border: 1px solid orangered; */
   font-family: 'Raleway', sans-serif;
+  font-family: 'ProductSans';
 }
 html {
   background-color: #e6e7e9;
@@ -70,7 +75,6 @@ html {
   height: 95px;
   /* width: 195px; */
   /* top: 70px; */
-  left: -155px;
   bottom: 30px;
   left: -70px;
   background-color: #46d7d2aa;
@@ -89,7 +93,7 @@ html {
 .phone,
 .email {
   color: #333;
-  font-size: 20px;
+  font-size: 1.2rem;
   flex: 1;
 }
 /* .phone {
@@ -124,12 +128,8 @@ header {
 }
 
 .full-name {
-  font-family: 'Neutra Text Bold';
-  font-family: 'Arvo', Serif;
-  font-family: 'Roboto', Sans-Serif;
-  font-family: 'Ruda', Sans-Serif;
-  font-family: 'Merriweather', Serif;
   font-family: 'Rubik', Sans-Serif;
+  font-family: 'ProductSans Bold';
 
   /* Font-Size: 44px; */
   padding-left: 20px;
@@ -137,12 +137,8 @@ header {
   font-size: 2.8rem;
 }
 .full-name span {
-  font-family: 'Neutra Text Bold';
-  font-family: 'Arvo', Serif;
-  font-family: 'Roboto', Sans-Serif;
-  font-family: 'Ruda', Sans-Serif;
-  font-family: 'Merriweather', Serif;
   font-family: 'Rubik', Sans-Serif;
+  font-family: 'ProductSans Bold';
 
   /* Font-Size: 44px; */
   padding: 0px;
@@ -151,6 +147,13 @@ header {
 p {
   color: #777;
   font-size: 0.9rem;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'ProductSans Bold';
 }
 
 h2 {
