--- a/style.css
+++ b/style.css
@@ -107,6 +107,22 @@ html {
   backdrop-filter: blur(18px);
   box-shadow: 15px 15px 40px #0003;
 }
+.clipboard-message {
+  font-family: 'ProductSans Bold';
+  position: absolute;
+  bottom: -75px;
+  left: 60px;
+  /* height: 10px; */
+  /* width: 10px; */
+  /* background-color: red; */
+  color: #777;
+  font-size: 1.2rem;
+  transition: 2s;
+}
+.hidden {
+  display: none;
+}
+
 .sticker {
   z-index: 200;
   position: absolute;
