--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ h4 {
   font-weight: 600;
   margin-bottom: 5px;
 }
+
 ul {
   padding-left: 14px;
   margin-bottom: 40px;
@@ -326,7 +327,11 @@ footer {
   flex: 7;
 }
 .a4 .content-wrapper aside ul {
-  margin-bottom: 70px;
+  margin-bottom: 1.5em;
+}
+.a4 .content-wrapper aside ul > ul {
+  margin-bottom: 0;
+  list-style: disc;
 }
 .a4 .content-wrapper aside li {
   margin-bottom: 5px;
