--- a/style.css
+++ b/style.css
@@ -78,13 +78,13 @@ html {
   opacity: 0.7;
 }
 .gh-svg:hover {
-  cursor: pointer;
+  cursor: default;
   opacity: 1;
   filter: invert(13%) sepia(20%) saturate(468%) hue-rotate(173deg)
     brightness(54%) contrast(91%);
 }
 .ln-svg:hover {
-  cursor: pointer;
+  cursor: default;
   opacity: 1;
   filter: invert(29%) sepia(74%) saturate(1221%) hue-rotate(194deg)
     brightness(67%) contrast(88%);
@@ -154,9 +154,12 @@ html {
   align-items: flex-start;
   justify-content: center;
 }
+a {
+  cursor: default;
+}
 .phone,
 .email {
-  cursor: pointer;
+  cursor: default;
   color: #222;
   font-family: 'ProductSans Bold';
   font-size: 1.2rem;
