--- a/dark.css
+++ b/dark.css
@@ -7,7 +7,8 @@
 }
 html {
   background-color: #202124;
-  background-image: radial-gradient(#333 10%, transparent 11%), radial-gradient(#333 10%, transparent 11%);
+  background-image: radial-gradient(#333 10%, transparent 11%),
+    radial-gradient(#333 10%, transparent 11%);
   /* background-image: none; */
 }
 
@@ -17,11 +18,11 @@ html {
   box-shadow: none;
 }
 .a4 .content-wrapper .content {
-  border-left: 2px solid #777;
+  border-left: 2px solid #fff2;
 }
 
 hr {
-  background-color: #777;
+  background-color: #fff2;
 }
 
 .experience-name {
@@ -74,6 +75,9 @@ hr {
 .profession {
   color: #000;
   background-color: var(--primary-color);
+}
+.profession:after {
+  background-color: #fff2;
 }
 
 p {
