--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ html {
 
 .a4 {
   z-index: 100;
-  background: #f7f7f7;
+  background: white;
   margin: 9em 0em 18em 0em;
   /*  */
   width: 56.5rem;
